GH-4224 code cleanup to simplify supporting all SHACL paths